fix(deploy): 不要なbootstrap/cacheのPHPキャッシュをリポジトリから除去し.gitignoreへ追加

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /public/hot
 /public/storage
 /public/build/
+/bootstrap/cache/*.php
+!/bootstrap/cache/.gitignore
 
 # Storage (keep gitignore placeholders)
 /storage/*.key
