--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,11 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/pail",
+                "nunomaduro/collision",
+                "laravel/sail"
+            ]
         }
     },
     "config": {
